--- a/MULT269/style.css
+++ b/MULT269/style.css
@@ -7,7 +7,7 @@
   font-weight: bold !important;
 }
 
-.select2.select2-container.select2-container--default .select2-selection {
+.results-list__order-by .select2.select2-container.select2-container--default .select2-selection {
   border-radius: 8px;
   border: 1px solid;
 }
