--- a/MULT276/style.css
+++ b/MULT276/style.css
@@ -51,7 +51,7 @@
   color: #0D3C61;
 }
 
-@media (max-witdh: 767px) {
+@media (max-width: 767px) {
   .main_container_copyTaxFlight {
     margin-bottom: 0;
   }
@@ -65,7 +65,7 @@
   margin-bottom: 2rem;
 }
 
-@media (max-witdh: 767px) {
+@media (max-width: 767px) {
   .copy-tax-flight-container {
     flex-direction: column;
     gap: 1rem;
