--- a/MULT276/style.css
+++ b/MULT276/style.css
@@ -42,7 +42,7 @@
   padding: 16px;
 }
 
-.main_container_copyTaxFlight>p {
+.main_container_copyTaxFlight p {
   margin: 0 !important;
   font-style: normal;
   font-weight: 400;
