--- a/MUL294/style.css
+++ b/MUL294/style.css
@@ -1,4 +1,4 @@
-.result .package-result--selected .package-result--master {
+.result{
     border-radius: 8px;
     border: 1px solid rgba(204, 204, 204, 0.80);
     background: #FBFBFB;
