--- a/MUL294/style.css
+++ b/MUL294/style.css
@@ -16,6 +16,7 @@
     color: white;
 }
 
-.result-option-package__moreinfo-toggle .glyphicon-menu-down {
+.result-option-package__moreinfo-toggle .glyphicon-menu-down,
+.result-option-package__moreinfo-toggle .glyphicon-menu-up {
     color: white;
 }
