--- a/MUL294/style.css
+++ b/MUL294/style.css
@@ -54,7 +54,7 @@
 .result-option-package__row .result-option-package__item{
     margin-bottom: .8rem;
 }
-.info-card >.info-card__content{
+.result-option__product-description >.info-card__content{
     background-color: #F3F3F3;
 
 }
