--- a/MUL294/style.css
+++ b/MUL294/style.css
@@ -79,7 +79,7 @@
     background: #1585E6;
 }
 
-.info-card__action-item+.info-card__action-item {
+.info-card__content a {
     border-radius: 4px;
     border: 1px solid #0F5EA3;
     background: none;
