--- a/MUL294/style.css
+++ b/MUL294/style.css
@@ -23,7 +23,7 @@
 
 .results-list__package .package-result--master .result__options,
 .results-list__package .result-option--extended {
-    border-radius: 0 0 8px 8px;
+    border-radius: 8px 8px 0 0;
 }
 
 .results-list__package .result-option:nth-child(even) {
