--- a/MUL294/style.css
+++ b/MUL294/style.css
@@ -114,9 +114,8 @@
     top: 16px;
 }
 
-/* Modal */
-
-.modal {
+ /* Estilos para la ventana modal */
+ .modal {
     display: none;
     position: fixed;
     z-index: 1;
@@ -125,7 +124,7 @@
     width: 100%;
     height: 100%;
     overflow: auto;
-    background-color: rgba(0, 0, 0, 0.4);
+    background-color: rgba(0, 0, 0, 0.5);
   }
   
   .modal-content {
@@ -134,19 +133,4 @@
     padding: 20px;
     border: 1px solid #888;
     width: 80%;
-    max-width: 600px;
-  }
-  
-  .close {
-    color: #aaa;
-    float: right;
-    font-size: 28px;
-    font-weight: bold;
-  }
-  
-  .close:hover,
-  .close:focus {
-    color: black;
-    text-decoration: none;
-    cursor: pointer;
   }
