--- a/MUL294/style.css
+++ b/MUL294/style.css
@@ -147,7 +147,7 @@
         float: right;
     }
 
-    .results-list__package .result__bottom-price .bestprice {
+    .result__bottom-price .bestprice {
         margin-top: 1rem;
         float: right !important;
     }
