--- a/MUL294/style.css
+++ b/MUL294/style.css
@@ -179,11 +179,19 @@
         position: absolute;
         top: 8px;
         right: 20px;
+        color: #0D4E88;
+        font-size: 7.295px;
+        font-family: Qanelas Soft;
+        font-weight: 600;
     }
 
     .ver-servicio {
         position: absolute;
         top: 8px;
         right: 20px;
+        color: #0D4E88;
+        font-size: 7.295px;
+        font-family: Qanelas Soft;
+        font-weight: 600;
     }
 }
