--- a/MUL294/style.css
+++ b/MUL294/style.css
@@ -171,7 +171,7 @@
         position: initial;
     }
 
-    .results-list__package .result-option {
+    .results-list__package .result-option.result-option--extended {
         position: relative;
     }
 
