--- a/MUL294/style.css
+++ b/MUL294/style.css
@@ -182,7 +182,7 @@
         position: absolute;
         top: 8px;
         right: 20px;
-        font-size: 7.295px;
+        color: #0D4E88;
         font-family: Qanelas Soft;
         font-weight: 600;
     }
