--- a/MUL294/style.css
+++ b/MUL294/style.css
@@ -189,4 +189,7 @@
     .results-list__package .result-option-package__moreinfo-toggle{
         display: none;
     }
+    .result-option__product-description{
+        display: inline-block;
+    }
 }
