--- a/MUL294/style.css
+++ b/MUL294/style.css
@@ -190,6 +190,8 @@
         display: none;
     }
     .result-option__product-description{
-        display: inline-block;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
     }
 }
