--- a/MULT245/style.css
+++ b/MULT245/style.css
@@ -325,6 +325,9 @@
     bottom: 2px;
     text-align: left;
   }
+  .hotel-result{
+    height: 500px;
+  }
 
 }
 @media (min-width: 767px) and (max-width: 1024px){
