--- a/MULT168/Modal/style.css
+++ b/MULT168/Modal/style.css
@@ -418,6 +418,6 @@
     background: transparent;
 }
 /* ********************** MULT-336 ************* */
-#main-menu-products .nav-elem:nth-child(8) {
+/* #main-menu-products .nav-elem:nth-child(8) {
     display: none;
-  }
+  } */
