--- a/MULT297/style.css
+++ b/MULT297/style.css
@@ -7,3 +7,6 @@
 #main-content > div > article > section.details-content > div.details-card__top > div{
     position: relative;
 }
+#main-content > div > article > section.details-content > div.details-card__top > div{
+    margin-bottom: 35px !important;
+}
