--- a/MULT297/style.css
+++ b/MULT297/style.css
@@ -18,3 +18,16 @@
     top: 70px;
     left: 0;
 }
+.main__container__share {
+    top: -43px;
+    left: 83%;
+}
+@media(max-width:767px){
+    #main-content > div > article > section.details-content > div.details-card__top > div > div.details-card__price > div{
+        display: flex;
+        justify-content: space-between;
+    }
+    #main-content > div > article > section.details-content > div.details-card__top > div > div.details-card__product > div{
+        margin-bottom: 51px;
+    }
+}
