--- a/MULT297/style.css
+++ b/MULT297/style.css
@@ -34,7 +34,7 @@
     word-wrap: break-word;
     border-radius: 8px;
     border: 1px solid #0D4E88;
-    background: #F8F9FA;
+    background: #ffff;
     padding: 0 !important;
 }
 
