--- a/MULT297/style.css
+++ b/MULT297/style.css
@@ -51,7 +51,7 @@
     left: 14px;
   }
   
-  .share__icon {
+  .share__icon__result {
     background: #FFFFFF;
     border: 1px solid #0D4E88;
     border-radius: 12px;
@@ -82,131 +82,4 @@
     #main-content>div>article>section.details-content>div.details-card__top>div>div.details-card__price>div>button  {
         display: inline-block !important;
     }
-    .share__icon {
-        width: 40px;
-        height: 40px;
-        border-radius: 100%;
-        font-size: 15px;
-      }
-    
-      .main__container__share__result {
-        width: 40px;
-        top: -43px;
-        left: 83%;
-        border-radius: 100%;
-      }
-    
-      .share__text__result {
-        display: none;
-    
-      }
-    
-      .recomendado {
-        border: 2px solid #1585e6;
-      }
-    
-      .deals {
-        top: -187px;
-        left: -4px;
-      }
-    
-      .deals>.label-info {
-        border-radius: 8px !important;
-      }
-    
-      .result.hotel-result {
-        height: 100%;
-    
-      }
-    
-      .results-list__item {
-        height: 496px;
-      }
-    
-      .info-card {
-        height: 100%;
-        display: flex;
-        flex-direction: column;
-      }
-    
-      .info-card__image {
-        height: 200px;
-      }
-    
-      .info-card__image--action {
-        width: 100%;
-        border-radius: 8px 8px 8px 40px;
-      }
-    
-      .info-card__image-holder {
-        width: 100%;
-        height: 200px;
-        border-radius: 8px 8px 8px 40px;
-      }
-    
-      .info-card__image-holder img {
-        width: 100%;
-      }
-    
-      .info-card__content {
-        height: 251px;
-        position: relative;
-      }
-    
-      .info-card__content>.info-card__price {
-        position: absolute !important;
-        width: 135px;
-        left: -12px;
-        top: 165px;
-        height: 50px;
-    
-      }
-    
-      .info-card__category {
-        top: 52px;
-        left: 10px;
-      }
-    
-      .info-card__actions {
-        display: flex;
-        justify-content: space-evenly;
-        bottom: -33px;
-        left: 0;
-      }
-    
-      .info-card__options-toggle {
-        width: 250px;
-      }
-    
-      .info-card__location--action.js-result-map-toggle {
-        top: 85px;
-      }
-    
-      .info-card__title--action {
-        padding-top: 5px;
-        line-height: 0.92 !important;
-      }
-    
-      .bestprice__price {
-        text-align: left;
-      }
-    
-      .main__container__bannerMensageCard {
-        max-width: 230px;
-      }
-    
-      .main__container__bannerMensageCard__App {
-        bottom: 72px;
-      }
-    
-      .divTaxCopyStyle {
-        position: absolute;
-        width: 150px;
-        right: -155px;
-        bottom: 2px;
-        text-align: left;
-      }
-      .hotel-result{
-        height: 500px;
-      }
 }
