--- a/MULT297/style.css
+++ b/MULT297/style.css
@@ -15,7 +15,7 @@
 }
 
 #hotelResult {
-    top: 70px;
+    top: 77%;
     left: 0;
 }
 
@@ -76,10 +76,14 @@
     #main-content>div>article>section.details-content>div.details-card__top>div>div.details-card__price>div {
         display: flex;
         justify-content: space-between;
+        align-items: center;
     }
 
     #main-content>div>article>section.details-content>div.details-card__top>div>div.details-card__product>div>span,
     #main-content>div>article>section.details-content>div.details-card__top>div>div.details-card__price>div>button  {
         display: inline-block !important;
+    }
+    #hotelResult {
+        top: 57%;
     }
 }
