--- a/MUL294/style.css
+++ b/MUL294/style.css
@@ -155,6 +155,7 @@
     color: white;
 }
 
+#ver-vuelo>div>div.modal-header>h2,
 #ver-vuelo>div>div.modal-header>h2 {
     font-size: 16px;
     font-style: normal;
