--- a/MUL294/style.css
+++ b/MUL294/style.css
@@ -129,7 +129,8 @@
     width: 100%;
     height: 100%;
     overflow: auto;
-    background-color: rgba(0, 0, 0, 0.5);
+    background-color:rgb(255 255 255);
+    text-align: left !important;
 }
 
 .modal-content {
