--- a/MUL294/style.css
+++ b/MUL294/style.css
@@ -157,7 +157,7 @@
 }
 
 #ver-vuelo>div>div.modal-header>h2,
-#ver-servicio > div > div.modal-header > h2 {
+#ver-servicio > h2 {
     font-size: 16px;
     font-style: normal;
     font-weight: 700;
