--- a/MUL294/style.css
+++ b/MUL294/style.css
@@ -129,7 +129,7 @@
     width: 100%;
     height: 100%;
     overflow: auto;
-    background-color: rgb(255 255 255);
+    background-color: rgb(255, 255, 255);
     text-align: left !important;
 }
 
@@ -138,7 +138,8 @@
     padding: 20px;
     border: 0;
     width: 100%;
-    height: 100%;
+    max-height: 100%;
+    overflow-y: auto;
 }
 
 .modal-header {
