--- a/MUL294/style.css
+++ b/MUL294/style.css
@@ -129,7 +129,6 @@
     width: 100%;
     height: 100%;
     overflow: auto;
-    background-color: rgb(255, 255, 255);
     text-align: left !important;
 }
 
@@ -172,6 +171,9 @@
 
 .js-result-package-option__hotel-description {
     padding: 10px;
+}
+.modal:before{
+    content: none !important;
 }
 
 @media (max-width: 767px) {
