--- a/MUL294/style.css
+++ b/MUL294/style.css
@@ -137,8 +137,10 @@
     padding: 20px;
     border: 0;
     width: 100%;
+    height: 100%;
     max-height: 100%;
     overflow-y: auto;
+    box-sizing: border-box; /* Añadido */
 }
 
 .modal-header {
