--- a/MUL294/style.css
+++ b/MUL294/style.css
@@ -119,7 +119,7 @@
 }
 
 /* Estilos para la ventana modal */
-.modal {
+.modal-packages {
     display: none;
     align-items: center;
     justify-content: center;
@@ -132,7 +132,7 @@
     text-align: left !important;
 }
 
-.modal-content {
+.modal-content-packages {
     background-color: #fefefe;
     padding: 20px;
     border: 0;
@@ -147,11 +147,11 @@
     width: 0px;
 }
 
-.modal-open {
+.modal-open-packages {
     overflow: hidden;
 }
 
-.modal-header {
+.modal-header-packages {
     display: flex;
     align-items: center;
     justify-content: space-between;
