--- a/MUL294/style.css
+++ b/MUL294/style.css
@@ -151,7 +151,7 @@
     overflow: hidden;
 }
 
-.modal-header-packages {
+.modal-header {
     display: flex;
     align-items: center;
     justify-content: space-between;
