--- a/MUL294/style.css
+++ b/MUL294/style.css
@@ -183,7 +183,7 @@
 .js-result-package-option__hotel-description {
     padding: 10px;
 }
-.modal-packages:before{
+.modal-packages-packages:before{
     content: none !important;
 }
 
