--- a/MUL294/style.css
+++ b/MUL294/style.css
@@ -168,7 +168,7 @@
     font-size: 14px;
 }
 
-#ver-vuelo>div>div.modal-header>h2,
+#ver-vuelo>h2,
 #ver-servicio>h2 {
     font-size: 16px;
     font-style: normal;
