--- a/MUL294/style.css
+++ b/MUL294/style.css
@@ -211,6 +211,7 @@
     #packages .info-card__price {
         width: 100%;
         float: right;
+        flex-direction: column;
     }
 
     .result__bottom-price .bestprice {
