--- a/MULT297/style.css
+++ b/MULT297/style.css
@@ -13,6 +13,9 @@
 #main-content>div>article>section.details-content>div.details-card__top>div {
     margin-bottom: 35px !important;
 }
+#main-content > div > article > section.details-content > div.details-card__top > div > div.details-card__price > div > button {
+    display: none;
+}
 
 #hotelResult {
     top: 77%;
