--- a/MULT297/style.css
+++ b/MULT297/style.css
@@ -39,6 +39,7 @@
     border: 1px solid #0D4E88;
     background: #ffff;
     padding: 0 !important;
+    font-weight: bold;
 }
 
 /* Boton Share */
