--- a/MULT245/style.css
+++ b/MULT245/style.css
@@ -34,6 +34,7 @@
   font-weight: 600;
   border-radius: 8px 0 0 8px !important;
   padding: 0.6rem !important;
+  border: 1px solid;
 }
 
 .alojamiento-recomendado {
