--- a/MULT168/Modal/style.css
+++ b/MULT168/Modal/style.css
@@ -458,6 +458,9 @@
     .whatsAppFixes>a {
         display: block;
     }
+    .whatsAppFixes{
+        margin-right: inherit;
+    }
 }
 
 /* ***************** MULT-305 **************** */
