--- a/MULT168/Modal/style.css
+++ b/MULT168/Modal/style.css
@@ -439,7 +439,7 @@
     background-color: #283747;
 }
 .whatsAppFixes{
-    margin-right: 175px !important;
+    right: 140px;
 }
 
 .whatsAppFixes>a {
